--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "axios": "^0.11.1",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
-    "react-router": "^2.4.0"
+    "react-router": "^2.4.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
@@ -42,8 +43,6 @@
     "node-sass": "^3.7.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^2.0.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
