--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.11.1",
+    "chart.js": "^1.1.1",
     "react": "^15.0.2",
+    "react-chartjs": "^0.7.3",
     "react-dom": "^15.0.2",
     "react-router": "^2.4.0",
     "underscore": "^1.8.3"
