--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^0.11.1",
     "chart.js": "^1.1.1",
+    "moment": "^2.13.0",
     "react": "^15.0.2",
     "react-chartjs": "^0.7.3",
     "react-dom": "^15.0.2",
